packages/svelte/tests/validator/samples/general-siblings-combinator-in-custom-element-selects-slot-fallback/_config.js
import { test } from '../../test';

export default test({
	skip: true,
	compileOptions: {
		customElement: true
	}
});
